# Arbitrary-Imports

./: .gitignore  pyproject.toml
arbitrary_imports/: __init__.py  enumeration.py  handler.py
example/: example.py
tests/: test_imports.py
tests/test_modules/files/: files_funcs.py
tests/test_modules/processes/: processes_funcs.py
